--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,12 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+logs/
+coverage/
+.idea/
+run/
+
+*.swp
 
 # TypeScript v1 declaration files
 typings/
@@ -59,3 +65,6 @@ typings/
 
 # next.js build output
 .next
+.DS_Store
+
+package-lock.json
